--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,37 +1,48 @@
-name: Bug Report
-description: File a bug report
+---
+name: "🐛 Bug Report"
+description: Report a bug or unexpected behavior
 title: "[Bug]: "
 labels: ["type: bug"]
+assignees: []
 body:
   - type: markdown
     attributes:
       value: |
         Thanks for taking the time to fill out this bug report!
-  
+
   - type: textarea
-    id: what-happened
+    id: description
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
+      label: Bug Description
+      description: A clear and concise description of what the bug is
+      placeholder: Tell us what happened...
+    validations:
+      required: true
+
+  - type: textarea
+    id: expected
+    attributes:
+      label: Expected Behavior
+      description: What did you expect to happen?
+      placeholder: Tell us what should have happened...
     validations:
       required: true
 
   - type: dropdown
     id: browsers
     attributes:
-      label: What browsers are you seeing the problem on?
+      label: Affected Browsers
       multiple: true
       options:
-        - Firefox
         - Chrome
+        - Firefox
         - Safari
-        - Microsoft Edge
+        - Edge
         - Other
 
   - type: textarea
     id: logs
     attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code.
+      label: Relevant Logs
+      description: Please copy and paste any relevant log output
       render: shell
