--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "agentopia-website",
-  "version": "1.0.0",
+  "name": "AI Agentopia",
+  "version": "1.3.0",
   "description": "AI Agentopia Website",
   "scripts": {
     "build": "tailwindcss -i ./css/input.css -o ./css/styles.css",
