feat: Setup Prettier, ESLint, Stylelint, Husky, and lint-staged
- Installed and configured Prettier for code formatting.
- Installed and configured ESLint for JavaScript linting.
- Installed and configured Stylelint for CSS linting.
- Integrated ESLint and Stylelint with Prettier to avoid conflicts.
- Set up Husky to manage Git hooks.
- Configured lint-staged to run linters/formatters on staged files before commit.
- Performed initial formatting and linting of the codebase.
- Updated lint-staged commands to use npx explicitly.
- Added debug flag to lint-staged in pre-commit hook for troubleshooting (to be reviewed).

--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -6,7 +6,7 @@ on:
       - main
       - develop
     paths:
-      - '.github/labels.yml'
+      - ".github/labels.yml"
   workflow_dispatch:
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - uses: micnncim/action-label-syncer@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
