--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
-  "name": "AI Agentopia",
+  "name": "agentopia-portal",
   "version": "1.3.0",
   "description": "AI Agentopia Website",
   "scripts": {
     "build": "tailwindcss -i ./css/input.css -o ./css/styles.css",
-    "watch": "tailwindcss -i ./css/input.css -o ./css/styles.css --watch"
+    "watch": "tailwindcss -i ./css/input.css -o ./css/styles.css --watch",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2",
+    "stylelint": "^16.6.1",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard": "^36.0.1",
     "tailwindcss": "^3.4.1"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,html,css,md,json,yaml,yml}": "npx prettier --write",
+    "*.{js,jsx,ts,tsx}": "npx eslint --fix",
+    "*.{css,scss,less}": "npx stylelint --fix"
   }
 }
