--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "agentopia-portal",
   "version": "1.3.0",
+  "type": "module",
   "description": "AI Agentopia Website",
   "scripts": {
     "build": "tailwindcss -i ./css/input.css -o ./css/styles.css",
@@ -11,6 +12,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
