chore: sync agent data and update configs
- Updates agents-data.json with the latest data from the AIAgentopia repo.
- Includes miscellaneous updates to README.md and package.json.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "AI Agentopia Website",
   "scripts": {
     "build": "tailwindcss -i ./css/input.css -o ./css/styles.css",
-    "watch": "tailwindcss -i ./css/input.css -o ./css/styles.css --watch"
+    "watch": "tailwindcss -i ./css/input.css -o ./css/styles.css --watch",
+    "start": "python -m http.server 8000"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1"
